Websocket, bug fix

--- a/test/s52webUI/s52ui.html
+++ b/test/s52webUI/s52ui.html
@@ -6,7 +6,7 @@
     <title>S52ui</title>
 
 <!--
-    <base href="/data/media/dart/s52ui">
+    <base href="/data/media/dart/s52webUI">
 -->
 
     <link rel="stylesheet" href="s52ui.css">
