--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -26,9 +26,9 @@
     <script type="text/javascript" src="js/websocket.js">     </script>
 
     <!-- dart code -->
+    <script type="application/dart" src="s52ui.dart">                  </script>
     <script type="text/javascript"  src="packages/browser/dart.js">    </script>
     <script type="text/javascript"  src="packages/browser/interop.js"> </script>
-    <script type="application/dart" src="s52ui.dart">                  </script>
 
   </head>
 
@@ -48,10 +48,10 @@
       window.onload = function initWebSocket() {
         console.log("initWebSocket() - start");
         websocket = new WebSocket(wsUri);
-        websocket.onopen    = function(evt) { onOpen(evt)    };
         websocket.onclose   = function(evt) { onClose(evt)   };
         websocket.onerror   = function(evt) { onError(evt)   };
-        websocket.onmessage = function(evt) { onMessage(evt) };
+        //websocket.onmessage = function(evt) { onMessage(evt) };
+        websocket.onopen    = function(evt) { onOpen(evt)    };
 
         // cordova define android "menubutton", "backbutton"
         // FIXME: use a button or TAB menu to toggle touch
