--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
 <html>
+  <noscript>s52ui need JavaScript</noscript>
+
   <head>
     <title>s52ui</title>
 
     <meta charset="utf-8">
-
-    <noscript>s52ui need JavaScript</noscript>
 
     <link rel="stylesheet" type="text/css" href="s52ui.css" />
 
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/cordova.js">       </script>
     <script type="text/javascript" src="js/cordova-2.2.0.js"> </script>
     -->
-    <script type="text/javascript" src="js/cordova.js">       </script>
+    <script type="text/javascript" src="js/cordova-2.2.0.js"> </script>
     <script type="text/javascript" src="js/websocket.js">     </script>
 
     <!-- dart code -->
@@ -33,76 +33,63 @@
   </head>
 
   <body id="mainBody" onkeypress="toggleUI();">
-
-
     <script type="text/javascript">
-      // WebSocket <--> libS52
-      // FIXME: can Dart handle directly Cordova websocket on Android ?
+        //*
+    	// set geolocation options here because Dart geolocation options 
+    	// seem broken as of 2013OCT13 latest build (28108)
+    	document.addEventListener("deviceready", getCurrentPosition, false);
+      	function getCurrentPosition() {
+        	console.log("XXXX getCurrentPosition(): - start -");
+        	navigator.geolocation.getCurrentPosition(showPosition, geoError, {maximumAge:60000, timeout:5000, enableHighAccuracy:true});
+        	console.log("XXXX getCurrentPosition(): - end -");
+    	}
+      	function showPosition(position) {
+  			var latlon = "ZZZZZ showPosition(): " + position.coords.latitude + "," + position.coords.longitude;
+  			console.log(latlon);
+	  	}
+      	function geoError(error) {
+      	  	console.log('EEEEEEEEE geoError(): code: '    + error.code    + ', ' + 'message: ' + error.message + '\n');
+        }
+        //*/
 
-      //var wsUri = 'ws://192.168.1.66:2950'; // laptop
-      //var wsUri = 'ws://192.168.1.67:2950'; // xoom
-      var wsUri = 'ws://127.0.0.1:2950';
+      	// WebSocket <--> libS52
+      	// FIXME: can Dart handle directly Cordova websocket on Android ?
 
-      // FIXME: optimisize WebSocket (sometime tround trip is 50ms)
-      var websocket;
-      window.onload = function initWebSocket() {
-        console.log("initWebSocket() - start");
-        websocket = new WebSocket(wsUri);
-        websocket.onclose   = function(evt) { onClose(evt)   };
-        websocket.onerror   = function(evt) { onError(evt)   };
-        //websocket.onmessage = function(evt) { onMessage(evt) };
-        websocket.onopen    = function(evt) { onOpen(evt)    };
+      	//var wsUri = 'ws://192.168.1.66:2950'; // laptop
+      	//var wsUri = 'ws://192.168.1.67:2950'; // xoom
+      	var wsUri = 'ws://127.0.0.1:2950';   // localhost
 
-        // cordova define android "menubutton", "backbutton"
-        // FIXME: use a button or TAB menu to toggle touch
-        document.addEventListener("menubutton", toggleUI, false);
-        //document.addEventListener("menubutton", toggleUI, true);
+      	var websocket;
+      	window.onload = function initWebSocket() {
+      		console.log("initWebSocket() - start - ");
+        	websocket = new WebSocket(wsUri);
+        	websocket.onclose   = function(evt) { onClose(evt)   };
+        	websocket.onerror   = function(evt) { onError(evt)   };
+        	websocket.onopen    = function(evt) { onOpen(evt)    };
 
-        // device orientation change
-        //window.addEventListener("resize", orientation, false);
-        //window.addEventListener("orientationchange", orientation, false);
-        // (optional) Android doesn't always fire orientationChange on 180 degree turns
-        //setInterval(orientation, 2000);
+        	// device orientation change
+        	//window.addEventListener("resize", orientation, false);
+        	//window.addEventListener("orientationchange", orientation, false);
+        	// (optional) Android doesn't always fire orientationChange on 180 degree turns
+        	//setInterval(orientation, 2000);
 
-        // will trigger touch initialisation and also set W x H
-        document.addEventListener("deviceready", screenSize, false);
+        	// will trigger touch initialisation and also set W x H
+	        //document.addEventListener("deviceready", screenSize, false);
 
-        screenSize();
-      }
+        	//screenSize();
+      	}
 
-      function onOpen(evt)    {}
-      function onClose(evt)   { console.log("s52ui.html:Websock:onClose():" + evt + "<<<"); }
-      function onError(evt)   { console.log("s52ui.html:Websock:onError():" + evt + "<<<"); }
+      	function onOpen (evt)   {}
+      	function onClose(evt)   { console.log("s52ui.html:Websock:onClose():" + evt + "<<<"); }
+      	function onError(evt)   { console.log("s52ui.html:Websock:onError():" + evt + "<<<"); }
 
-      function toggleUI()     {}
-      //function toggleUI(evt)     {}
-
-      //function orientation()  { orientationChg(window.orientation, window.innerWidth, window.innerHeight);}
-      function screenSize()   { setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight);}
-      //function screenSize()   { setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight); wsReady();}
-      //function screenSize()   { console.log("window.orientation: " + window.orientation);setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight);}
-
-/*
- var supportsOrientation = ( typeof window.orientation == 'number' && typeof window.onorientationchange == 'object' );
-
-// Do nothing if we don't need to shim
-if ( supportsOrientation ) return;
-
-if (navigator.geolocation)
-{
-  navigator.geolocation.getCurrentPosition(showPosition);
-}else{
-  alert("no GPS");
-}
-
-function showPosition(position)
-{
-  var latlon=position.coords.latitude+","+position.coords.longitude;
-  alert(latlon);
-}
-*/
+      	//function orientation()  { orientationChg(window.orientation, window.innerWidth, window.innerHeight);}
+      	//function screenSize()   { setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight);}
+      	//function screenSize()   { setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight); wsReady();}
+      	//function screenSize()   { console.log("window.orientation: " + window.orientation);setTouchScrnSz(window.orientation, window.innerWidth, window.innerHeight);}
 
     </script>
+  
     <p id="__beg_mainWindowComponent" hidden="true">id_beg</p>
     <p id="__end_mainWindowComponent" hidden="true">id_end</p>
 
@@ -112,6 +99,13 @@ function showPosition(position)
 
 
 <!--
+//*
+ var supportsOrientation = ( typeof window.orientation == 'number' && typeof window.onorientationchange == 'object' );
+
+// Do nothing if we don't need to shim
+if ( supportsOrientation ) return;
+//*/
+ 
 
 <div id="example"></div>
 <script>
