GL optimisation by merging triangle strip

--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -7,7 +7,10 @@
     <title>s52ui</title>
 
     <meta charset="utf-8">
-
+    
+    <!-- remove the 300ms delay for touch event -->
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    
     <link rel="stylesheet" type="text/css" href="s52ui.css" />
 
     <!-- initial UI layout -->
