--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -24,9 +24,27 @@
 
   </head>
 
-  <body id="mainBody">
+  <body id="mainBody" onload='deviceReady()'>
     <script type="text/javascript">
       function toggleUI() {}
+      
+      // ambient light
+      window.addEventListener('devicelight', function(event) {
+        console.log('WWWWW' + event.value + 'lux');
+      });
+
+      // Dart GPS fail if not intialize here
+      function deviceReady() {
+        console.log("XXXXX s52ui.html:getCurrentPosition(): ..");
+        navigator.geolocation.getCurrentPosition(showPosition, geoError, {maximumAge:60000, timeout:5000, enableHighAccuracy:true});
+      }
+      function showPosition(position) {
+        var latlon = "ZZZZZ s52ui.html:showPosition(): " + position.coords.latitude + "," + position.coords.longitude;
+        console.log(latlon);
+      }
+      function geoError(error) {
+        console.log('EEEEE s52ui.html:geoError(): code: '    + error.code    + ', ' + 'message: ' + error.message + '\n');
+      }
     </script>
 
     <p id="__beg_mainWindowComponent" hidden="true">id_beg</p>
