--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -27,7 +27,12 @@
   <body id="mainBody" onload='deviceReady()'>
     <script type="text/javascript">
       function toggleUI() {}
-      
+
+      //var wsUri = 'ws://192.168.1.66:2950'; // laptop
+      //var wsUri = 'ws://192.168.1.67:2950'; // xoom
+      var wsUri = 'ws://192.168.1.69:2950'; // Nexus
+      //var wsUri = 'ws://127.0.0.1:2950';   // localhost
+
       // ambient light
       window.addEventListener('devicelight', function(event) {
         console.log('WWWWW' + event.value + 'lux');
