del interop.js not needed

--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -2,15 +2,15 @@
 
 <html>
   <noscript>s52ui need JavaScript</noscript>
-  
+
   <head>
     <title>s52ui</title>
 
     <meta charset="utf-8">
-    
+
     <!-- remove the 300ms delay for touch event -->
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    
+
     <link rel="stylesheet" type="text/css" href="s52ui.css" />
 
     <!-- initial UI layout -->
@@ -20,7 +20,6 @@
     <!-- dart code -->
     <script type="application/dart" src="s52ui.dart">                  </script>
     <script type="text/javascript"  src="packages/browser/dart.js">    </script>
-    <script type="text/javascript"  src="packages/browser/interop.js"> </script>
 
   </head>
 
@@ -29,8 +28,8 @@
       function toggleUI() {}
 
       //var wsUri = 'ws://192.168.1.66:2950'; // laptop
-      //var wsUri = 'ws://192.168.1.67:2950'; // xoom
-      var wsUri = 'ws://192.168.1.69:2950'; // Nexus
+      var wsUri = 'ws://192.168.1.67:2950'; // xoom
+      //var wsUri = 'ws://192.168.1.69:2950'; // Nexus
       //var wsUri = 'ws://127.0.0.1:2950';   // localhost
 
       // ambient light
