--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -22,23 +22,15 @@
     <script type="text/javascript"  src="packages/browser/dart.js">    </script>
 
   </head>
-
-  <body id="mainBody" onload='deviceReady()'>
+  <body id="mainBody">
     <script type="text/javascript">
-      function toggleUI() {}
-
-      //var wsUri = 'ws://192.168.1.66:2950'; // laptop
-      var wsUri = 'ws://192.168.1.67:2950'; // xoom
-      //var wsUri = 'ws://192.168.1.71:2950'; // xoom
-      //var wsUri = 'ws://192.168.1.69:2950'; // Nexus
-      //var wsUri = 'ws://127.0.0.1:2950';   // localhost
-
-      // ambient light
+      /* ambient light
       window.addEventListener('devicelight', function(event) {
         console.log('WWWWW' + event.value + 'lux');
       });
+      */
 
-      // Dart GPS fail if not intialize here
+      /* Dart GPS fail if not intialize here
       function deviceReady() {
         console.log("XXXXX s52ui.html:getCurrentPosition(): ..");
         navigator.geolocation.getCurrentPosition(showPosition, geoError, {maximumAge:60000, timeout:5000, enableHighAccuracy:true});
@@ -50,6 +42,7 @@
       function geoError(error) {
         console.log('EEEEE s52ui.html:geoError(): code: '    + error.code    + ', ' + 'message: ' + error.message + '\n');
       }
+      */
     </script>
 
     <p id="__beg_mainWindowComponent" hidden="true">id_beg</p>
