--- a/test/s52ui/web/s52ui.html
+++ b/test/s52ui/web/s52ui.html
@@ -10,7 +10,6 @@
 
     <!-- remove the 300ms delay for touch event -->
     <meta name="viewport" content="width=device-width, user-scalable=no">
-
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="s52ui.css"    >
 
@@ -34,7 +33,7 @@
       // Dart GPS fail if not intialize here - 2015JUN09, Dart SDK 1.11.1-dev3.0
       function deviceReady() {
         console.log("XXXXX s52ui.html:getCurrentPosition(): ..");
-        navigator.geolocation.getCurrentPosition(showPosition, geoError, {maximumAge:60000, timeout:60000, enableHighAccuracy:true});
+        //navigator.geolocation.getCurrentPosition(showPosition, geoError, {maximumAge:60000, timeout:60000, enableHighAccuracy:true});
       }
       function showPosition(position) {
         var latlon = "ZZZZZ s52ui.html:showPosition(): " + position.coords.latitude + "," + position.coords.longitude;
